<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Memento Mori</string>
    <string name="widget_desc">Votre vie en semaines</string>
    <string name="config_intro">Le widget affiche votre vie en semaines, une case par semaine.</string>
    <string name="birth_date">Date de naissance</string>
    <string name="end_age">Âge de fin de vie estimé</string>
    <string name="years">ans</string>
    <string name="save">Enregistrer</string>
    <string name="display">Affichage</string>
    <string name="unit_days">Jours</string>
    <string name="unit_weeks">Semaines</string>
    <string name="unit_months">Mois</string>
    <string name="summary">Fin estimée le %1$s\nSur %2$s %3$s, il en reste %4$s</string>
</resources>
